src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <description>Person Age</description>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Birth_Date__c</fullName>
        <label>Birth Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Children__c</fullName>
        <label>Children</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Distribution__c</fullName>
        <label>Distribution</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Facebook_ID__c</fullName>
        <label>Facebook ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Height__c</fullName>
        <label>Height</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InsuredTobaccoConsumption__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Within the last 5 years, has the proposed insured used any form of Tobacco or Nicotine?</description>
        <inlineHelpText>Within the last 5 years, has the proposed insured used any form of Tobacco or Nicotine?</inlineHelpText>
        <label>InsuredTobaccoConsumption</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Insuredflownaircraft__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has the proposed Insured flown on an aircraft as a pilot or crew member in the past 2 years, or any such flights planned in the future?</description>
        <inlineHelpText>Has the proposed Insured flown on an aircraft as a pilot or crew member in the past 2 years, or any such flights planned in the future?</inlineHelpText>
        <label>Insuredflownaircraft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LifeDisabilityInsurance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has the proposed Insured or even had a  request for Life or Disability Insurance Declined, Rated, Cancelled, or Restricted in Any way?</description>
        <inlineHelpText>Has the proposed Insured or even had a  request for Life or Disability Insurance Declined, Rated, Cancelled, or Restricted in Any way?</inlineHelpText>
        <label>LifeDisabilityInsurance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <picklist>
            <picklistValues>
                <fullName>Married</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Separated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <label>Occupation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Beneficiary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicant</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProspectProfilePictureDocId__c</fullName>
        <label>ProspectProfilePictureDocId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <label>Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Spouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Father</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Son</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daughter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Social_Security_Number__c</fullName>
        <label>Social Security Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_ID__c</fullName>
        <label>Tax ID</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tobacco_Nicotine_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tobacco/Nicotine Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Applicant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joint Applicant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beneficiary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>US_Citizen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>US Citizen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Your_Health__c</fullName>
        <label>Your Health</label>
        <picklist>
            <picklistValues>
                <fullName>1 Thumbs Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Thumbs Down</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Thumbs Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Thumbs Down</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Business_Account</fullName>
        <active>true</active>
        <label>Business Account</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>